# Mikufy

./: Explain.txt  README.md  build.sh  clean.sh  deb.sh  desktop.sh  flake.nix  install.sh  mikufy  mikufy.desktop  package.nix  rpm.sh
headers/: file_manager.h  main.h  process_launcher.h  syntax_highlighter.h  terminal_manager.h  terminal_window.h  text_buffer.h  web_server.h  window_manager.h
mikufy/: build.sh  clean.sh  desktop.sh
mikufy/src/: CMakeLists.txt  main.cpp
mikufy/ui/: app.js  index.html  package.json  style.css  tsconfig.json
src/: file_manager.cpp  main.cpp  process_launcher.cpp  syntax_highlighter.cpp  terminal_helper.cpp  terminal_manager.cpp  terminal_window.cpp  text_buffer.cpp  web_server.cpp  window_manager.cpp
web/: app.js  index.html  style.css  virtual_editor.js
